--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ html, body {
     flex-flow:        row wrap;
     justify-content:  space-evenly;
     align-items:      center;
-    align-content:    stretch;
+    align-content:    space-around;
 }
 
 /* The links in the menu section */
