--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,8 @@ a:active.menu-item {
             flex-direction: row;
         }   
         .menu-item {
-            width: 10%
-            height: 30%
+            width: 10%;
+            height: 30%;
         }
     }
 }
