Fixed omitted comma that broke the site on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a:active.menu-item {
     a[href*="bandcamp"].
     a[href*="discord"],
     a[href*="protonmail"],
-    a[href*="reddit"]
+    a[href*="reddit"].
     a[href*="soundcloud"],
     a[href*="youtube"],
     {
