--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a:active.menu-item {
 @media only screen and (max-width: 768px) {
 
     /* Links to be hidden on mobile but stay on desktop. */
-    a[href*="bandcamp"].
+    a[href*="bandcamp"],
     a[href*="discord"],
     a[href*="protonmail"],
     a[href*="reddit"],
