--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ a:active.menu-item {
     a[href*="protonmail"],
     a[href*="reddit"],
     a[href*="soundcloud"],
-    a[href*="youtube"]
+    a[href*="youtube"] 
     {
         display: none;
     }
@@ -120,8 +120,9 @@ a:active.menu-item {
             flex-direction: row;
         }   
         .menu-item {
-            width: 20%;
+            width: 15%;
             height: 45%;
+            margin: 0% 1%;
         }
     }
 }
