--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html, body {
     text-align:       center;
     background-color: var(--header-color);
     border-bottom:    3px solid var(--detail-color);
-    padding:          1% 0%;
+    padding:          3% 0%;
     display:          flex;
     flex-flow:        column nowrap;
     justify-content:  space-around; 
@@ -83,7 +83,7 @@ a:active.menu-item {
 .menu-item {
     width: 25%;
     height: 25%;
-    font-size:       400%;
+    font-size:       350%;
     margin:          0% 2%;
     color:           var(--main-color);
     border:          3px solid var(--detail-color);
@@ -125,7 +125,7 @@ a:active.menu-item {
             width:     15%;
             height:    45%;
             margin:    0% 1%;
-            font-size: 400%;
+            /*font-size: 400%;*/
         }
     }
 }
