Hides header overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ html, body {
     flex-flow:        column nowrap;
     justify-content:  space-around; 
     align-items:      center;
+    overflow:         hidden;
 }
 
 /* Search bar for DuckDuckGo  */
