--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,14 @@ a:active.menu-item {
 
     /* For when a soft keyboard is out */
     @media only screen and (orientation: landscape) {
+        .header {
+            height: 25%;
+        }
         .search-bar {
             height: 55%;
+        }
+        .menu {
+            height: 75%;
         }
     }
 
