--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ html, body {
     margin:      0.5%;
 
     /* Appearance */
-    font-family: 'AIRBORNEGPBOLD';
+    font-family: 'AIRBORNEGPBold';
     font-weight: bold;
     color:       var(--main-color);
 }
