--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,8 @@ a:active.menu-item {
     /* Size */
     width:           25%;
     height:          25%;
-    font-size:       350%;
+    /*font-size:       350%;*/
+	font-size:       400%;
 
     /* Spacing */
     margin:          0% 2%;
@@ -160,7 +161,7 @@ a:active.menu-item {
 
         .menu-item {
             /* Size */
-            font-size: 325%
+            /*font-size: 325%*/
         }
     }
 
@@ -232,6 +233,6 @@ a:active.menu-item {
         /* Size */
         width:     10%;
         height:    25%;
-        font-size: 400%;
+        /*font-size: 400%;*/
     }
 }
