--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ a:active.menu-item {
             /* Size */
             width:     15%;
             height:    45%;
+			font-size: 450%;
 
             /* Spacing */
             margin:    0% 1%;
