--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ html, body {
 /* The grey box at the top. */
 .header {
 	/* Size */
-	height:           20%;
+	height:           20vh;
 
 	/* Spacing */
 	padding:          1% 0%;
@@ -72,8 +72,8 @@ html, body {
 /* The dark blue space that takes up most of the screen. */
 .menu {
 	/* Size */
-	width:            100%;
-	height:           80%;
+	width:            100vw;
+	height:           80vh;
 
 	/* Spacing */
 	margin:           0 auto;
@@ -149,7 +149,7 @@ a:active.menu-item {
 		}
 
 		.search-bar {
-			/* Size */
+			/* Sizhttps://derpsquid9.github.io/startpage/e */
 			height: 55%;
 		}
 
@@ -208,18 +208,18 @@ a:active.menu-item {
 
 	.title {
 		/* Size */
-		font-size: 200%;
+		font-size: 2vmax;
 	}
 
 	.header {
 		/* Spacing */
-		padding: 0%;
+		padding: 0vw;
 	}
 
 	.search-bar {
 		/* Size */
-		width:  40%;
-		height: 40%;
+		width:  40vw;
+		height: 8vh;
 	}
 
 	/*.menu {
@@ -227,8 +227,11 @@ a:active.menu-item {
 
 	.menu-item {
 		/* Size */
-		width:     10%;
-		height:    25%;
-		font-size: 500%;
+		width:     10vw;
+		height:    20vh;
+		font-size: 13vmin;
+
+		/* Spacing */
+		margin:      0vh 2vw;
 	}
 }
