Added sans-serif as a fallback font for the 'Welcome Back' text

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html, body {
 	margin:      0.5%;
 
 	/* Appearance */
-	font-family: 'AIRBORNEGPBold';
+	font-family: 'AIRBORNEGPBold', sans-serif;
 	font-weight: bold;
 	color:       var(--main-color);
 }
